--- a/trunk/nfcip-java/CHANGELOG
+++ b/trunk/nfcip-java/CHANGELOG
@@ -11,7 +11,9 @@
 	  NFCIPAbstract & rename it to "log" instead of "debug"
 	- take some irrelevant stuff out of the interface
 	- make everything more consistent
-
+	- update Ant file 
+	- add release script to tools/ directory 
+	
 1.2.0	(20090614)
 	- add javadoc target to build file
 	- remove resetNumberOfResets method
